# smas

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.c  smas.c  smas.h  smas.pc.in
